--- a/scss/style.css
+++ b/scss/style.css
@@ -682,8 +682,258 @@ body._lock {
   margin-top: 10px;
 }
 
+.reviews {
+  position: relative;
+  padding-bottom: 140px;
+}
+
 .reviews__container {
   max-width: 1020px;
   margin: 0px auto;
+  position: relative;
+  padding-top: 195px;
+}
+
+.reviews__quotes {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 260px;
+  text-transform: capitalize;
+  color: var(--accent-color);
+}
+
+.swiper-wrapper {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.slider-reviews__text {
+  font-size: 32px;
+  line-height: 1.57;
+  text-transform: capitalize;
+  color: #fff;
+}
+
+.slider-reviews__info {
+  margin-top: 40px;
+}
+
+.slider-reviews__name {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 126%;
+  letter-spacing: 0.01em;
+  text-transform: capitalize;
+}
+
+.reviews-deco {
+  position: absolute;
+  top: -500px;
+  left: 0;
+  z-index: -1;
+}
+
+.gallery {
+  background: -webkit-gradient(linear, right top, left top, color-stop(0.01%, #1A242F), color-stop(82.97%, rgba(26, 36, 47, 0)));
+  background: linear-gradient(270deg, #1A242F 0.01%, rgba(26, 36, 47, 0) 82.97%);
+}
+
+.gallery__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 63px;
+}
+
+.gallery__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  padding: 140px 0;
+}
+
+.gallery__item {
+  width: 350px;
+  aspect-ratio: 7/11;
+}
+
+.gallery__item img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.gallery__title {
+  max-width: 520px;
+}
+
+.gallery__text {
+  margin-top: 22px;
+}
+
+.gallery__link {
+  display: inline-block;
+  margin-top: 45px;
+  padding: 22px 42px;
+  background-color: var(--accent-color);
+  text-decoration: none;
+  color: #fff;
+  font-weight: 500;
+  font-size: 24px;
+  text-transform: capitalize;
+}
+
+.link {
+  display: inline-block;
+  margin-top: 45px;
+  padding: 22px 42px;
+  background-color: var(--accent-color);
+  text-decoration: none;
+  color: #fff;
+  font-weight: 500;
+  font-size: 24px;
+  text-transform: capitalize;
+}
+
+.begin {
+  position: relative;
+  padding: 120px 0;
+}
+
+.begin__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 40px;
+  max-width: 1240px;
+}
+
+.begin__slogan {
+  font-weight: 600;
+  font-size: 68px;
+  line-height: 1.26;
+  text-transform: capitalize;
+}
+
+.begin__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+}
+
+.begin__link {
+  margin-top: 50px;
+}
+
+.begin-wave {
+  position: absolute;
+  z-index: -2;
+  left: 0;
+  bottom: -250px;
+  left: 0;
+}
+
+.begin-rect {
+  position: absolute;
+  top: -77px;
+  right: 0;
+}
+
+.footer {
+  background-color: #1A242F;
+  padding-top: 140px;
+}
+
+.footer .main-footer__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+  gap: 80px;
+}
+
+.footer__main {
+  padding-bottom: 95px;
+}
+
+.footer__block {
+  display: inline-block;
+}
+
+.footer__text {
+  width: 340px;
+  margin: 22px 0 32px;
+}
+
+.footer__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+
+.footer__social {
+  text-decoration: none;
+}
+
+.footer__social svg {
+  fill: #555E68;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+@media (any-hover: hover) {
+  .footer__social:hover svg {
+    fill: #fff;
+  }
+}
+
+.footer__copyright {
+  border-top: 1px solid #303A44;
+  padding: 15px 0;
+}
+
+.links-footer__header {
+  font-weight: 600;
+  font-size: 26px;
+  letter-spacing: 0.01em;
+  text-transform: capitalize;
+  margin-bottom: 11px;
+  text-align: start;
+}
+
+.links-footer__link {
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.copyright__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
