--- a/scss/style.scss
+++ b/scss/style.scss
@@ -661,23 +661,36 @@ body{
 
 // reviews-----------------------------
 .reviews {
-
+    position: relative;
+    padding-bottom: 140px;
+   
     // .reviews__container
 
     &__container {
         max-width: 1020px;
         margin: 0px auto;
+        position: relative;
+        padding-top: 195px;
     }
 
     // .reviews__quotes
 
     &__quotes {
+        position: absolute;
+        top:0;
+        left: 0;
+        font-size: 260px;
+        text-transform: capitalize;
+        color: var(--accent-color);
     }
 
     // .reviews__slider
 
     &__slider {
     }
+}
+.swiper-wrapper{
+    align-items: flex-start;
 }
 .slider-reviews {
 
@@ -689,22 +702,285 @@ body{
     // .slider-reviews__text
 
     &__text {
+        font-size: 32px;
+        line-height: 1.57;
+        text-transform: capitalize;
+        color: #fff;
     }
 
     // .slider-reviews__info
 
     &__info {
+        margin-top: 40px;
     }
 
     // .slider-reviews__name
 
     &__name {
+        font-weight: 600;
+        font-size: 22px;
+        line-height: 126%;
+        letter-spacing: 0.01em;
+        text-transform: capitalize;
     }
 
     // .slider-reviews__job
 
     &__job {
     }
+}
+.reviews-deco{
+    position: absolute;
+    top:-500px;
+    left:0;
+    z-index: -1;
+}
+
+//_________Gallery________
+.gallery {
+    background: linear-gradient(270deg, #1A242F 0.01%, rgba(26, 36, 47, 0) 82.97%);
+
+    // .gallery__container
+
+    &__container {
+        display: flex;
+        align-items: center;
+        gap:63px;
+    }
+
+    // .gallery__box
+
+    &__box {
+        display: flex;
+        align-items: center;
+        gap:20px;
+        padding: 140px 0;
+    }
+
+    // .gallery__item
+
+    &__item {
+        width: 350px;
+        aspect-ratio: 7/11;
+        img{
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    
+    // .gallery__title
+
+    &__title {
+        max-width: 520px;
+    }
+
+    // .gallery__text
+
+    &__text {
+        margin-top: 22px;
+    }
+
+    // .gallery__link
+
+    &__link {
+        display: inline-block;
+        margin-top: 45px;
+        padding:22px 42px;
+        background-color:var(--accent-color) ;
+        text-decoration: none;
+        color: #fff;
+        font-weight: 500;
+        font-size: 24px;
+        text-transform: capitalize;
+
+    }
+}
+
+.link{
+    display: inline-block;
+    margin-top: 45px;
+    padding:22px 42px;
+    background-color:var(--accent-color) ;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 500;
+    font-size: 24px;
+    text-transform: capitalize;
+}
+
+//_________Section Begin_________
+.begin {
+    position: relative;
+    padding: 120px 0;
+   
+    
+
+    // .begin__container
+
+    &__container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap:40px;
+        max-width: 1240px;
+    }
+
+    // .begin__slogan
+
+    &__slogan {
+        font-weight: 600;
+        font-size: 68px;
+        line-height: 1.26;
+        text-transform: capitalize;
+    }
+
+    // .begin__content
+
+    &__content {
+        flex:0 0 50%;
+    }
+
+    // .begin__text
+
+    &__text {
+    }
+
+    // .begin__link
+
+    &__link {
+        margin-top: 50px;
+    }
+}
+.begin-wave {
+    position: absolute;
+    z-index: -2;
+    left: 0;
+    bottom:-250px;
+    left:0;
+}
+.begin-rect {
+    position: absolute;
+    top:-77px;
+    right: 0;
+}
+
+
+//_________________Footer_________________
+.footer {
+    background-color:#1A242F ;
+    padding-top: 140px;
+    .main-footer__container{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        gap:80px;
+    }
+
+    // .footer__main
+
+    &__main {
+        padding-bottom:95px ;
+    }
+
+    // .footer__block
+
+    &__block {
+    
+    display: inline-block;
+        
+    }
+
+    // .footer__link
+
+    &__link {
+        
+       
+    }
+
+    // .footer__text
+
+    &__text {
+        width: 340px;
+        margin:22px 0 32px;
+        
+    }
+
+    // .footer__socials
+
+    &__socials {
+        display: flex;
+        align-items: center;
+        gap:30px;
+    }
+
+    // .footer__social
+
+    &__social {
+        text-decoration: none;
+        svg{
+            fill:#555E68;
+            transition:all .2s;
+        }
+        @media(any-hover:hover){
+            &:hover{
+                svg{
+                    fill:#fff;
+                }
+            }
+        }
+        
+    }
+
+    // .footer__copyright
+
+    &__copyright {
+        border-top: 1px solid #303A44;
+        padding: 15px 0;
+    }
+}
+
+.links-footer {
+
+    // .links-footer__header
+
+    &__header {
+        font-weight: 600;
+        font-size: 26px;
+        letter-spacing: 0.01em;
+        text-transform: capitalize;
+        margin-bottom: 11px;
+        text-align:start;
+    }
+
+    // .links-footer__list
+
+    &__list {
+       
+        
+    }
+
+    // .links-footer__item
+
+    &__item {
+       
+    
+    }
+
+    // .links-footer__link
+
+
+    
+    &__link {
+        text-decoration: none;
+        white-space: nowrap;
+       
+        
+    }
+}
+.copyright__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
